# MultiKG-BioAgent-

./: Makefile-uv  README.md
multi-kg-biomed-chatbot/: CONTRIBUTING.md  README.md  pyproject.toml
multi-kg-biomed-chatbot/.github/workflows/: ci.yml
multi-kg-biomed-chatbot/agents/: evidence_merger_agent.py  orchestrator_agent.py
multi-kg-biomed-chatbot/agents/biggim_agent/: agent.py
multi-kg-biomed-chatbot/agents/chatfront-agent/: chatfront_agent.py
multi-kg-biomed-chatbot/agents/clinical_connections_agent/: agent.py
multi-kg-biomed-chatbot/agents/clinical_trials_agent/: agent.py
multi-kg-biomed-chatbot/agents/drug_approvals_agent/: agent.py
multi-kg-biomed-chatbot/agents/evidence_merger_agent/: agent.py
multi-kg-biomed-chatbot/agents/final_agent/: agent.py  callbacks.py
multi-kg-biomed-chatbot/assets/: Interactive-Software-Workflow-Concept1.html  Interactive-Workflow.html  MultiKG-BioAgent-Dashboard.html  MultiKG-BioAgent-Dashboard_react.html  Workflow-MultiKG-BioAgent.html
multi-kg-biomed-chatbot/dataset/: nlp-trapi-training-set1.json
multi-kg-biomed-chatbot/docs/: ARCHITECTURE.md  End2EndExample-Epilepsy.md  EpilepsyWorkflow-visualizer.html  KagleCapstoneWriteUp.md  PROJECT_PROPOSAL.md  SequnceDiagram-WhatCauseEpilepsy.plantuml
multi-kg-biomed-chatbot/tools/: biggim_trapi_example.py  clinical_connections_trapi_example.py  http_utils.py  monarch_query_example.py  monarch_tool.py  reasoner_trapi_tool.py  translator_kp_tool.py
multi-kg-biomed-chatbot/workflows/: disease_gene_drug_workflow.yaml
(+26 files in other folders)
